--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@react-google-maps/api": "^2.2.0",
@@ -11,11 +14,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.6.3",
     "google-map-react": "^2.1.9",
     "lodash.isempty": "^4.4.0",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.4",
     "react-icons": "^4.2.0",
